--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <div class="hero-content">
       <h1>Neueröffnung</h1>
       <p class="sub">
-        Wir bieten Bagels, Sandwiches, kleine Ding-Sachen und einen geilen Kaffee.
+        Wir bieten Bagels, Sandwiches, mit liebe zubereitete Snacks und den besten Kaffee.
       </p>
       <a class="btn" href="mailto:info@banko-de-cafe.de">Kontakt&nbsp;aufnehmen</a>
     </div>
