--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
       <p class="sub">
         Wir bieten Bagels, Sandwiches, mit liebe zubereitete Snacks und den besten Kaffee.
       </p>
-      <a class="btn" href="mailto:info@banko-de-cafe.de">Kontakt&nbsp;aufnehmen</a>
+      <a class="btn" href="mailto:info@banco-de-cafe.de">Kontakt&nbsp;aufnehmen</a>
     </div>
   </header>
 
