--- a/index.html
+++ b/index.html
@@ -404,8 +404,11 @@
       <p style="margin-top: 1.4rem; font-size: 1rem; opacity: 0.85;">
         Tel.&nbsp;
         <a href="tel:+4917631115508">0176&nbsp;3111&nbsp;5508</a> &middot;
-        <a href="mailto:info@banko-de-cafe.de">info@banko-de-cafe.de</a>
+       
       </p>
+        <p style="margin-top: 1.4rem; font-size: 1rem; opacity: 0.85;">
+           <a href="mailto:info@banco-de-cafe.de">info@banco-de-cafe.de</a>
+             </p>
     </div>
     <div id="location-map">
       <div id="map"></div>
