Aktualisiere Bildpfade in index.html für Header und Testkarten

--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 body{line-height:1.5;color:#333;background:#fafafa;}
 header{
   height:80vh;
-  background-image:url('../header_parallax.webp'); /* Pfad angepasst für Unterordner */
+  background-image:url('../hero.jpg'); /* Hero-Bild aus dem Hauptverzeichnis */
   background-size:cover;
   background-position:center;
   background-attachment:fixed; /* Parallax-Effekt */
@@ -92,7 +92,7 @@ section h2{
   <h2>Test Bereich</h2>
   <div class="grid">
     <div class="card">
-      <img src="../manhatten_city_plain.webp" alt="Test Bild 1">
+      <img src="../assets/manhatten_city_plain.webp" alt="Test Bild 1">
       <div class="content">
         <h3>Test Element 1</h3>
         <p>Dies ist ein Test-Element für die Unterseite. Hier können neue Features getestet werden.</p>
@@ -100,7 +100,7 @@ section h2{
       </div>
     </div>
     <div class="card">
-      <img src="../new_york_style_plain.webp" alt="Test Bild 2">
+      <img src="../assets/new_york_style_plain.webp" alt="Test Bild 2">
       <div class="content">
         <h3>Test Element 2</h3>
         <p>Ein weiteres Test-Element mit ähnlichem Design wie die Hauptseite.</p>
@@ -108,7 +108,7 @@ section h2{
       </div>
     </div>
     <div class="card">
-      <img src="../pastrami_deluxe_plain.webp" alt="Test Bild 3">
+      <img src="../assets/pastrami_deluxe_plain.webp" alt="Test Bild 3">
       <div class="content">
         <h3>Test Element 3</h3>
         <p>Drittes Test-Element für experimentelle Inhalte und neue Layouts.</p>
@@ -116,7 +116,7 @@ section h2{
       </div>
     </div>
     <div class="card">
-      <img src="../vegan_vegas_plain.webp" alt="Test Bild 4">
+      <img src="../assets/vegan_vegas_plain.webp" alt="Test Bild 4">
       <div class="content">
         <h3>Test Element 4</h3>
         <p>Letztes Test-Element in dieser Sektion für umfassende Tests.</p>
